RESOLVED FIXED288680
REGRESSION(291182@main): Broke Apple Internal build
https://bugs.webkit.org/show_bug.cgi?id=288680
Summary REGRESSION(291182@main): Broke Apple Internal build
Jonathan Bedard
Reported 2025-02-26 20:19:46 PST
291182@main broke an Apple Internal build.
Attachments
Jonathan Bedard
Comment 1 2025-02-26 20:19:47 PST
Jonathan Bedard
Comment 2 2025-02-26 20:20:59 PST
EWS
Comment 3 2025-02-26 20:26:22 PST
Committed 291197@main (f71d7a3573d0): <https://commits.webkit.org/291197@main> Reviewed commits have been landed. Closing PR #41484 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.