REGRESSION(291182@main): Broke Apple Internal build https://bugs.webkit.org/show_bug.cgi?id=288680 rdar://145714062

Unreviewed build fix.

* Source/WebCore/PAL/pal/spi/cocoa/AVFoundationSPI.h:

Canonical link: https://commits.webkit.org/291197@main