Source/WebCore/PAL/pal/spi/cocoa/AVFoundationSPI.h
@@ -57,10 +57,12 @@ IGNORE_WARNINGS_END
 #endif
 #endif
 
+NS_ASSUME_NONNULL_BEGIN
 @interface AVOutputContext(WKSecureCoding)
 - (NSDictionary *)_webKitPropertyListData;
 - (instancetype)_initWithWebKitPropertyListData:(NSDictionary *)plist;
 @end
+NS_ASSUME_NONNULL_END
 
 #import <AVFoundation/AVAudioSession_Private.h>
 
